Fully implemented the scores + fixed bug with Mod
Implemented all scores (BeatmapScore, BestPerformance and  RecentlyPlayed)
Implemented caching for BeatmapScore and BestPerformance

Added Grade (for scores)

Renamed CacheUtils to CacheUtilsImpl, and added CacheUtils.
Improves readability and maintainability a bit

All mods (besides the first 2) where 1 bitwise too high, and switched the bitwise to long's